[tool.poetry]
name = "python-extension-framework"
version = "0.1.0"
description = ""
authors = ["Joe Snell <joepsnell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
